fix: design on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -89,6 +89,11 @@
   max-height: 150px; /* limit maximum height */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  /* force position on ios safari */
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  left: 1rem;
 }
 
 .sendButton {
@@ -131,7 +136,7 @@
   .chatContainer {
     max-width: 100%;
     min-height: 100vh;
-    border-radius: 0;
+    border: none;
     margin: 0;
   }
 
